Corregir enlaces y rutas de imágenes para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1>Odin Recipes </h1>
-  <img src="https://www.allrecipes.com/thmb/8xyMKEgpBDrGjYFxzQ8FOPaNkiY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj-1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt="Hamburguesa de pollo sabrosa" width="300" height="300" id="imagen1">
+  <img src="https://www.allrecipes.com/thmb/8xyMKEgpBDrGjYFxzQ8FOPaNkiY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj-1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt="Hamburguesa de pollo sabrosa" width="300" height="300" id="recipe1">
   <br>  
-  <a href="file:///home/nicodin/index.html">Slow Cooker Buffalo Chicken Sandwiches</a>
+  <a href="#recipe1">Slow Cooker Buffalo Chicken Sandwiches</a>
   <h2>Description</h2>
   <p>This crockpot Buffalo chicken is great for hearty sandwiches that will please those who love Buffalo chicken wings. This recipe is perfect for those days spent watching football. I like to top these with blue cheese or ranch dressing.</p>
   <h3>Ingredients</h3>
@@ -28,9 +28,9 @@
     <li>Pile shredded chicken and sauce onto hoagie rolls. Serve with remaining Buffalo sauce.</li>
   </ol>
   <!-- Slow Cooker Macarronini-->
-  <img src="https://www.allrecipes.com/thmb/wRSDpUgu8VR2PpQtjGq97cuk8Fo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/237311-slow-cooker-mac-and-cheese-DDMFS-4x3-9b4a15f2c3344c1da22b034bc3b35683.jpg" alt="Macarronini coun queso" width="300" height="300" id="imagen2">
+  <img src="https://www.allrecipes.com/thmb/wRSDpUgu8VR2PpQtjGq97cuk8Fo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/237311-slow-cooker-mac-and-cheese-DDMFS-4x3-9b4a15f2c3344c1da22b034bc3b35683.jpg" alt="Macarronini coun queso" width="300" height="300" id="recipe2">
   <br>  
-  <a href="file:///home/nicodin/index.html">Slow Cooker Mac and Cheese</a>
+  <a href="#recipe2">Slow Cooker Mac and Cheese</a>
 <h2>Description</h2>
 <p>This slow cooker mac and cheese is the ultimate comfort food. It's creamy, cheesy, and perfect for any occasion. You'll love the convenience of making mac and cheese in your slow cooker!</p>
 <h3>Ingredients</h3>
@@ -52,9 +52,9 @@
   <li>Serve the creamy mac and cheese hot and enjoy!</li>
 </ol>
 <!-- TACOS FIESTA-->
-<img src="https://www.allrecipes.com/thmb/KQgjXr78OvGX1ddEoDxp2N7veOk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/242342-fiesta-slow-cooker-shredded-chicken-tacos-ddmfs-3X2-0902-775cf5010b5b46cdbdf2ca50993628a9.jpg" alt="Altos Tacos Fiesta" width="300" height="300" id="imagen3">
+<img src="https://www.allrecipes.com/thmb/KQgjXr78OvGX1ddEoDxp2N7veOk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/242342-fiesta-slow-cooker-shredded-chicken-tacos-ddmfs-3X2-0902-775cf5010b5b46cdbdf2ca50993628a9.jpg" alt="Altos Tacos Fiesta" width="300" height="300" id="recipe3">
 <br>  
-<a href="file:///home/nicodin/index.html">Fiesta Slow Cooker Shredded Chicken Tacos</a>
+<a href="#recipe3">Fiesta Slow Cooker Shredded Chicken Tacos</a>
 <h2>Description</h2>
 <p>These fiesta shredded chicken tacos are bursting with flavor and are perfect for a festive gathering. Let your slow cooker do the work, and you'll have delicious and tender chicken ready to be turned into flavorful tacos!</p>
 <h3>Ingredients</h3>
@@ -78,9 +78,9 @@
 <p>Explore our delicious recipes:</p>
     
     <ul>
-        <li><a href="#imagen1">Slow Cooker Buffalo Chicken Sandwiches</a></li>
-        <li><a href="#imagen2">Slow Cooker Mac and Cheese</a></li>
-        <li><a href="#imagen3">Fiesta Slow Cooker Shredded Chicken Tacos</a></li>
+        <li><a href="#recipe1">Slow Cooker Buffalo Chicken Sandwiches</a></li>
+        <li><a href="#recipe2">Slow Cooker Mac and Cheese</a></li>
+        <li><a href="#recipe3">Fiesta Slow Cooker Shredded Chicken Tacos</a></li>
         <!-- Add more recipe links as needed -->
     </ul>
 
